fixed messages(names not showing up)

--- a/css/site.css
+++ b/css/site.css
@@ -201,7 +201,7 @@ textarea {
 
 #mainContainer {
     width: 100%;
-    margin-bottom: 4%;
+    margin-bottom: 5%;
 }
 
 .viewAds-wrapper {
